<resources>
    <string name="app_name">IMC_Calculator</string>
    <string name="imc">Calcular mi IMC</string>
    <string name="mujer">Mujer</string>
    <string name="altura">Altura</string>
    <string name="_120_cm">120 cm</string>
    <string name="hombre">Hombre</string>
    <string name="selecciona_tu_altura">Selecciona tu altura</string>
    <string name="peso">peso</string>
    <string name="num_peso">60</string>
    <string name="num_edad">60</string>
    <string name="edad">edad</string>
    <string name="calcular">Calcular</string>
    <string name="recalcular">Volver a calcular</string>

    <string name="error">Error</string>

    <string name="bajo_peso">Bajo peso</string>
    <string name="def_bajo_peso">Tu peso es inferior al rango saludable, posiblemente indicando una ingesta calórica insuficiente.</string>

    <string name="peso_normal">Peso normal</string>
    <string name="def_peso_normal">Tu peso está en un rango adecuado para tu altura y constitución, sugiriendo un estado de salud óptimo.</string>

    <string name="sobrepeso">Sobrepeso</string>
    <string name="def_sobrepeso">Tienes un exceso de peso que podría afectar tu salud, aunque aún no alcanza niveles de obesidad.</string>

    <string name="obesidad">Obesidad</string>
    <string name="def_obesidad">Tu peso está significativamente por encima de lo recomendado, lo que podría aumentar el riesgo de problemas de salud. Es importante abordarlo de manera consciente y tomar medidas para gestionarlo adecuadamente.</string>
</resources>